# Controller

./: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake  bld  main.c  objdump_elf  ocd_flash  openocd_run  toolchain-arm-none-eabi.cmake  toolchain.cmake
app/: CMakeLists.txt  app.c  app.h  main.c  quaternion.proto  simple.proto  syscalls.c
bsp/: CMakeLists.txt  bsp.c  bsp.h  main.c  ring_buffer.c  ring_buffer.h  ringbuffer.c  ringbuffer.h  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c
bsp/lwip/: CMake1Lists.txt  ethernetif.c  ethernetif.h  lwip.c  lwip.h  lwipopts.h  stm32f4xx_hal_eth.c  stm32f4xx_hal_eth.h
bsp/lwip/src/core/: memp.c  timeouts.c  udp.c
bsp/lwip/stm32f4_eth_periph/src/: stm32f4xx_hal_eth.c
lib/: CMakeLists.txt
lib/inc/STM32F4xx_StdPeriph_Driver/: stm32f4x7_eth.h  stm32f4xx_hal_def.h
lib/src/: STM32F439ZITx_FLASH.ld  system_stm32f4xx.c
lib/src/STM32F4xx_StdPeriph_Driver/: stm32f4xx_hal_eth.c
libs/stm32f4xx/: CMakeLists.txt
libs/stm32f4xx/inc/: stm32f4xx.h
libs/stm32f4xx/src/: stm32f439zi_flash.ld
